[package]
name = "sfex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
ecies-ed25519 = "0.5.1"
parity-scale-codec = "3.4.0"
rand = "0.7"
sp-core = "18.0.0"
